--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -30,7 +30,8 @@
 
 <div id="main" role="main">
   <div class="article-author-side">
-    {% include _author-bio.html %}
+    <h3>Welcome to CSM</h3>
+    <img src="{{ site.url }}/images/team-thumb.jpg" class="bio-photo">
   </div>
   <article>
     <h1>{{ page.title }}</h1>
