--- a/_includes/_scripts.html
+++ b/_includes/_scripts.html
@@ -35,7 +35,7 @@
       var $form = $('form.js');
 
       if ( $form.length > 0 ) {
-          $('form input[type="submit"]').bind('click', function ( event ) {
+          $form).bind('submit', function ( event ) {
               if ( event ) event.preventDefault();
               // validate_input() is a validation function I wrote, you'll have to substitute this with your own.
               register($form);
